--- a/Tree.vcxproj.filters
+++ b/Tree.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
 </Project>
